# feedreader

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  Makefile  README.md  xkocic02.tar
include/: inputParser.h  parsedLink.h  parsedResponse.h  parsedXML.h  parsedXMLFeed.h  pasedResponse.h  util.h  webScraper.h
include/plagiat/: getopt_b.h
src/: feedreader.cpp  inputParser.cpp  parsedLink.cpp  parsedResponse.cpp  parsedXML.cpp  parsedXMLFeed.cpp  pasedResponse.cpp  util.cpp  webScraper.cpp
src/res/: getopt_w.cpp
tests/: CMakeLists.txt  correct.txt
